# litestar-sso

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  build-docs.sh  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: generate_reference.py  tutorials.md
docs/how-to-guides/: 00-installation.md  http-development.md  key-error.md  state-return-url.md  use-with-fastapi-security.md
examples/: README.md  facebook.py  fitbit.py  framework_agnostic_example.py  generic.py  github.py  gitlab.py  google.py  kakao.py  line.py  linkedin.py  microsoft.py  naver.py  notion.py  seznam.py  twitter.py  yandex.py
litestar_sso/: __init__.py  base.py  exceptions.py  pkce.py  schemas.py  state.py
litestar_sso/providers/: apple.py  bitbucket.py  discord.py  facebook.py  fitbit.py  generic.py  github.py  gitlab.py  google.py  kakao.py  line.py  linkedin.py  microsoft.py  naver.py  notion.py  seznam.py  soundcloud.py  spotify.py  tidal.py  twitter.py  yandex.py
litestar_sso/sso/: apple.py  base.py  bitbucket.py  discord.py  facebook.py  fitbit.py  generic.py  github.py  gitlab.py  google.py  kakao.py  line.py  linkedin.py  microsoft.py  naver.py  notion.py  seznam.py  soundcloud.py  spotify.py  tidal.py  twitter.py  yandex.py
tests/: test_base.py  test_generic_provider.py  test_openid_responses.py  test_pkce.py  test_providers.py  test_providers_individual.py  test_race_condition.py  utils.py
