[tool.poetry]
name = "litestar-sso"
version = "0.16.0"
description = "litestar plugin to enable SSO to most common providers (such as Facebook login, Google login and login via Microsoft Office 365 Account)"
authors = ["Tomas Votava <info@tomasvotava.eu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tomasvotava/litestar-sso"
homepage = "https://tomasvotava.github.io/litestar-sso/"
documentation = "https://tomasvotava.github.io/litestar-sso/"
keywords = [
    "litestar",
    "sso",
    "oauth",
    "google",
    "facebook",
    "spotify",
    "linkedin",
]
include = ["litestar_sso/py.typed"]


[tool.pytest.ini_options]
testpaths = ["tests/"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=litestar_sso",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-report=term-missing",
    "-n",
    "auto",
]


[tool.black]
line-length = 120

[tool.ruff]
exclude = [
    ".archive",
    ".roo",
    ".github",
    "migrations",
    "docs",
    "infra",
    "scripts",
    "static",
]
line-length = 120
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "E712", # Avoid equality comparison to True
]


[tool.ruff.lint]
select = [
    #"D",
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "S",
    "A",
    "DTZ",
    "PT",
    "SIM",
    "PTH",
    "PD",
    "RUF",
    "T20",
]

ignore = [
    "B028", # allow warning without specifying `stacklevel`
]


[tool.ruff.lint.isort]
force-single-line = true
from-first = false
# default-section = "first-party"
force-sort-within-sections = false
forced-separate = ["tests", "litestar_sso"]
known-first-party = ["litestar_sso"]
known-third-party = ["litestar", "sqlalchemy", "faker"]
length-sort = true
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "testing",
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.per-file-ignores]
"tests*/**/*.py" = ["S101"] # Allow asserts in tests
"**/__init__.py" = ["D104"] # Allow missing docstrings in __init__ files

[tool.poe.tasks]
ruff = "ruff check litestar_sso"
black = "black litestar_sso"
isort = "isort --settings-path .isort.cfg litestar_sso"
mypy = "mypy --config-file mypy.ini litestar_sso"
black-check = "black --check litestar_sso"
isort-check = "isort --settings-path .isort.cfg --check-only litestar_sso"

format = ["black", "isort"]
lint = ["ruff", "mypy", "black-check", "isort-check"]
pre-commit = "pre-commit"

test = "pytest"
coverage = "coverage report"

docs = "mkdocs build --clean"

[tool.poetry.group.dev.dependencies]
black = ">=23.7.0"
isort = "^5"
markdown-include = "^0.8.1"
mkdocs-material = { extras = ["imaging"], version = "^9.3.2" }
mkdocstrings = { extras = ["python"], version = ">=0.23,<0.27" }
mypy = "^1"
poethepoet = ">=0.21.1,<0.29.0"
pre-commit = "^3"
pytest = ">=7,<9"
pytest-asyncio = "^0.24"
pytest-cov = ">=4,<6"
pytest-xdist = "^3"
uvicorn = ">=0.23.1"
ruff = ">=0.4.2,<0.7.0"
types-oauthlib = "^3.3.0.20260324"

[tool.poetry.dependencies]
httpx = ">=0.23.0"
oauthlib = ">=3.1.0"
pydantic = { extras = ["email"], version = ">=1.8.0" }
python = ">=3.10,<4.0"
litestar = "^2.12.1"
pyjwt = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
